--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,7 @@
   font-family: "Ebrima";
   color: #08415C;
   background-color: #D9CAB3;
-}
-
-.parent{
-  height: 100vh;
-}
-
-.mybody{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  box-sizing: border-box;
 }
 
 .navbar{
@@ -127,6 +117,14 @@
   border-radius: 50px;
 }
 
+.loginbody{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 84.4px);
+}
+
 .inputcard{
   width: 450px;
   height: 450px;
@@ -135,6 +133,7 @@
   text-align: center;
   background-color: #08415C;
   border-radius: 50px;
+  margin-top: 10px;
 }
 
 .inputcard input{
@@ -285,6 +284,15 @@
   margin-bottom: 40px;
 }
 
+.searchcard h2{
+  font-family: "Dancing Script";
+  font-weight: bold;
+  color: #CC2936;
+  background-color: #08415C;
+  font-size: 50px;
+  margin-bottom: 40px;
+}
+
 .searchcard .links{
   margin: auto;
   background-color: #08415C;
@@ -379,7 +387,165 @@
   color: #FFFFFF;
 }
 
-.content{
-  margin: 2px;
-  padding: 2px;
+.aboutbody{
+  height: 100vh;
+}
+
+.aboutbody .textdiv{
+  
+  justify-content: left;
+  padding: 5%;
+  padding-top: 2.5%;
+  width: 50vw;
+  background-color: transparent;
+}
+.aboutbody .textdiv h1{
+  background-color: transparent;
+  font-family: "Dancing Script";
+  font-weight: bold;
+  text-align: center;
+  color:#CC2936;
+  font-size: 72px;
+}
+
+.aboutbody .textdiv span{
+background-color: transparent;
+color: #5D9BFF;
+}
+
+.aboutbody .textdiv h2{
+  background-color: transparent;
+  font-weight: bold;
+  margin:20px 20px 0px 0px;
+  font-size: 50px;
+}
+.aboutbody .textdiv p{
+  margin: 10px 20px 50px 0px;
+  background-color: transparent;
+  font-size: 25px;
+}
+
+.doublebody{
+  height: 200vh;
+}
+
+.doublebody .maindiv{
+  text-align: center;
+  height: 50%;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.2); /* Tint color */
+  background-blend-mode: multiply;
+}
+
+.doublebody .maindiv label{
+  display: block;
+  margin: 0 auto;
+  background-color: transparent;
+  font-family: "Dancing Script";
+  font-weight: bold;
+  text-align: center;
+  color:#CC2936;
+  font-size: 150px;
+}
+
+.doublebody .maindiv span{
+  background-color: transparent;
+  color: #5D9BFF;
+  text-align: center;
+}
+
+.doublebody .maindiv p{
+  display: block;
+  margin: 0 auto;
+  background-color: transparent;
+  font-family: "Dancing Script";
+  text-align: center;
+  width: 500px;
+  color:#D9CAB3;
+  font-size: 70px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.doublebody .maindiv button{
+  margin-top: 50px;
+  background-color: #FFFFFF;
+  color: #5D9BFF;
+  font-weight: bold;
+  width: 398px;
+  height:55px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.doublebody .maindiv button:hover{
+  background-color: #5D9BFF;
+  color: #FFFFFF;
+}
+
+.doublebody .stepsdiv{
+  height: 50%;
+}
+
+.doublebody .stepsdiv .left{
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  margin-bottom: 50px;
+  margin-left: 305px;
+}
+
+.doublebody .stepsdiv .right{
+  position: absolute;
+  right:    0;
+  bottom:   -100%;  
+  margin-bottom: 50px;
+  margin-right: 260px;
+}
+
+.doublebody .stepsdiv label{
+  padding: 30px;
+  display: block;
+  margin: 0 auto;
+  background-color: transparent;
+  font-family: "Dancing Script";
+  font-weight: bold;
+  text-align: center;
+  color:#CC2936;
+  font-size: 72px;
+}
+
+.doublebody .stepsdiv span{
+  background-color: transparent;
+  color: #5D9BFF;
+  text-align: center;
+}
+
+.doublebody .stepsdiv button{
+  background-color: #FFFFFF;
+  color: #08415C;
+  font-weight: bold;
+  width: 398px;
+  height:55px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.doublebody .stepsdiv button:hover{
+  background-color: #08415C;
+  color: #FFFFFF;
+}
+
+.doublebody .imageflex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 125px;
+  padding-left: 20px;
+}
+
+.doublebody .stepssize{
+  transform: scale(0.75);
+  position: absolute;
+  background-color: transparent;
 }
