--- a/src/index.css
+++ b/src/index.css
@@ -420,9 +420,16 @@ color: #5D9BFF;
   font-size: 50px;
 }
 .aboutbody .textdiv p{
-  margin: 10px 20px 50px 0px;
+  margin: 10px 20px 30px 0px;
   background-color: transparent;
   font-size: 25px;
+}
+
+.aboutbody .textdiv label{
+  background-color: transparent;
+  color: black;
+  font-family: 'Lucida Sans';
+  text-align: center;
 }
 
 .doublebody{
